tests/fsharp/typecheck/sigs/neg81.fsx
module M

let y = 1

let f() = 
    y+

type C() = 
   member x.P = 1
